--- a/estilo.css
+++ b/estilo.css
@@ -40,7 +40,7 @@ body{
 }
 
 .produtos{
-    margin-top: 67px;
+    margin-top: 189px;
 
 }
 
@@ -48,7 +48,7 @@ body{
     text-align: center;
     font-size: 49px;
     font-weight:normal ;
-    margin-bottom: 19px;
+    margin-bottom: 74px;
 }
 
 .linha{
@@ -78,5 +78,19 @@ body{
     width: 214px;
     box-sizing: border-box;
     margin: 0px auto 25px auto ;
-    border-radius: 5px;
+    border-radius: 0px;
+    text-decoration: none;
+}
+
+
+.contato{
+    margin-top: 189px;
+}
+
+.rodape{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 30px;
+    background-color: #D9D9D9;
 }
