--- a/estilo.css
+++ b/estilo.css
@@ -13,7 +13,7 @@ body{
    /* padding-top: 41px;
     padding-bottom: 41px;
     padding-left: 54px;
-    padding-right: 54px;*/
+    padding-right: 54px;*kkk/
    /* padding: 41px 54px 41px 54 px; */
    padding: 41px 54px;
     display: flex;
