--- a/estilo.css
+++ b/estilo.css
@@ -14,7 +14,8 @@ body{
     padding-bottom: 41px;
     padding-left: 54px;
     padding-right: 54px;*kkk/
-   /* padding: 41px 54px 41px 54 px; */
+   /* padding: 41px 54px 41px 54 px; faf
+    */
    padding: 41px 54px;
     display: flex;
     align-items: center;
